# cardano-c

./: .clang-format  .clang-tidy  .codacy.yml  .codecov.yml  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  MISRA.md  README.md  VERSION  clang-format-config.json
benchmarks/: CMakeLists.txt  README.md
benchmarks/uplc/: bench_run.c  bench_run.h  uplc_bench.c
benchmarks/uplc/utils/: bench_io.c  bench_io.h  bench_report.c  bench_report.h  bench_stats.c  bench_stats.h
examples/: CMakeLists.txt  provider_example.c  secure_key_handler_example.c
examples/providers/blockfrost/: blockfrost_provider.c
examples/src/: bip39_example.c  deferred_redeemer_batch_example.c  deferred_redeemer_self_index_example.c  deferred_redeemer_withdraw_zero_example.c  donate_to_treasury_example.c  drep_pubkey_example.c  drep_script_example.c  mint_burn_native_script_example.c  mint_burn_plutus_script_example.c  propose_treasury_withdrawal_example.c  provider_example.c  reward_account_pubkey_example.c  reward_account_script_example.c  secure_key_handler_example.c  send_lovelace_example.c  spend_from_native_script_example.c  spend_from_validator_example.c  vote_for_proposal_pubkey_example.c  vote_for_proposal_script_example.c
examples/src/providers/: provider_factory.h
examples/src/utils/: console.c  utils.c  utils.h
examples/utils/: console.c  console.h  utils.c  utils.h
fuzz/: CMakeLists.txt  cbor_reader_fuzzer.c  json_object_fuzzer.c  transaction_fuzzer.c  uplc_data_deep_asan_driver.c  uplc_flat_asan_driver.c  uplc_flat_fuzzer.c
fuzz/json_corpus/: blockfrost_tx.json  blockfrost_utxo.json  pparam.json  tx.json
fuzz/tx_corpus/: crash-23986f99679cd8b4f69c6b2ccc79c2ef0886e0b3  crash-4073a91ce14a0deb88f60f5105b813c306181cd5  crash-ec2ecebd94f6745491104b3cbc195d0eabbcfd5e  crash-f5ca50f4204486f1b6284ee29ecfad3f6ed4ce28  leak-3313ef1bb4ed55d4f9f0591bdd3e3a02d6138966  leak-ce2bb0d6a1f2acf9ba28c5889c9dbfc38f31532a  leak-e61e847e47a640bbe0d0db6ae4390efc742c28f3  oom-893f002584ceb91b3e986886611cbd35687eb4b9  oom-e3250b7c58f7ea55178aa7f82a859c457c7823f4  tx_cbor.hex  tx_cbor2.hex  tx_cbor3.hex  tx_cbor4.hex  tx_cbor5.hex
lib/: CMakeLists.txt  cardano-c.pc.in
lib/include/Cardano/: Cardano.h
lib/include/cardano/: allocators.h  bip39.h  buffer.h  cardano.h  endian.h  error.h  export.h  object.h  slot_config.h  time.h  typedefs.h
lib/src/: Cardano.c  allocators.c  allocators.h  cardano.c  config.h.in  endian.c  endian.h  error.c  object.c  string_safe.c  string_safe.h  time.c
lib/src/address/: address.c  base_address.c  byron_address.c  enterprise_address.c  pointer_address.c  reward_address.c
lib/src/assets/: asset_id.c  asset_id_list.c  asset_id_map.c  asset_name.c  asset_name_list.c  asset_name_map.c  multi_asset.c  policy_id_list.c
lib/src/auxiliary_data/: auxiliary_data.c  metadatum.c  metadatum_label_list.c  metadatum_list.c  metadatum_map.c  plutus_v1_script_list.c  plutus_v2_script_list.c  plutus_v3_script_list.c  plutus_v4_script_list.c  transaction_metadata.c
lib/src/bip39/: bip39.c  bip39_wordlist_en.h
lib/src/buffer/: buffer.c  buffer.h
lib/src/cbor/: cbor_additional_info.h  cbor_initial_byte.c  cbor_initial_byte.h  cbor_major_type.c  cbor_reader_state.c  cbor_simple_value.c  cbor_tag.c  cbor_validation.c  cbor_validation.h  cbor_writer.c  half.c
lib/src/certs/: auth_committee_hot_cert.c  cert_type.c  certificate.c  certificate_set.c  genesis_key_delegation_cert.c  mir_cert.c  mir_to_pot_cert.c  mir_to_stake_creds_cert.c  pool_registration_cert.c  pool_retirement_cert.c  register_drep_cert.c  registration_cert.c  resign_committee_cold_cert.c  stake_delegation_cert.c  stake_deregistration_cert.c  stake_registration_cert.c  stake_registration_delegation_cert.c  stake_vote_delegation_cert.c  stake_vote_registration_delegation_cert.c  unregister_drep_cert.c  unregistration_cert.c  update_drep_cert.c  vote_delegation_cert.c  vote_registration_delegation_cert.c
lib/src/collections/: array.c  array.h  set.c  set.h
lib/src/common/: anchor.c  bigint.c  credential.c  datum.c  drep.c  ex_units.c  governance_action_id.c  guard_set.c  network_magic.c  protocol_version.c  reward_address_list.c  unit_interval.c  utxo.c  utxo_list.c  withdrawal_map.c
lib/src/crypto/: arithmetic.c  arithmetic.h  bip32_key_derivation.c  bip32_key_derivation.h  bip32_private_key.c  bip32_public_key.c  blake2b_hash.c  blake2b_hash_set.c  crc32.c  ed25519_private_key.c  ed25519_public_key.c  ed25519_signature.c  emip3.c  pbkdf2.c
lib/src/cryptography/: pbkdf2.c
lib/src/encoding/: base58.c  bech32.c
lib/src/json/: json_object.c  json_writer.c
lib/src/key_handlers/: cip_1852_constants.c  secure_key_handler.c  software_secure_key_handler.c
lib/src/message_signing/: cip8.c
lib/src/plutus_data/: constr_plutus_data.c  plutus_data.c  plutus_list.c  plutus_map.c
lib/src/pool_params/: ipv4.c  ipv6.c  multi_host_name_relay.c  pool_metadata.c  pool_owners.c  pool_params.c  relay.c  relay_type.c  relays.c  single_host_addr_relay.c  single_host_name_relay.c
lib/src/proposal_procedures/: committee.c  committee_members_map.c  constitution.c  credential_set.c  governance_action_type.c  hard_fork_initiation_action.c  info_action.c  new_constitution_action.c  no_confidence_action.c  parameter_change_action.c  proposal_procedure.c  proposal_procedure_set.c  treasury_withdrawals_action.c  update_committee_action.c
lib/src/protocol_params/: cost_model.c  costmdls.c  drep_voting_thresholds.c  ex_unit_prices.c  pool_voting_thresholds.c  proposed_param_updates.c  protocol_param_update.c  protocol_parameters.c  update.c
lib/src/providers/: provider.c
lib/src/scripts/: script.c
lib/src/transaction/: sub_transaction.c  transaction.c
lib/src/transaction_body/: account_balance_interval.c  account_balance_intervals_map.c  value.c  (+9 more)
lib/tests/: allocators.cpp  allocators_helpers.cpp  allocators_helpers.h  bip39.cpp  cardano.cpp  endian.cpp  error.cpp  json_helpers.cpp  json_helpers.h  object.cpp  string_safe.cpp  time.cpp
(+1014 files in other folders)
