FILE(GLOB EXAMPLE_SOURCES "*_example.c")
MESSAGE(STATUS "Example sources: ${EXAMPLE_SOURCES}")

FILE(GLOB_RECURSE PROVIDERS_HEADER_DIRS RELATIVE ${CMAKE_SOURCE_DIR} utils/ providers/)

FILE(GLOB_RECURSE PROVIDERS_SOURCE_FILES utils/*.c providers/*.c)

FIND_PACKAGE(CURL REQUIRED)

FOREACH(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
    GET_FILENAME_COMPONENT(EXAMPLE_TARGET_NAME ${EXAMPLE_SOURCE} NAME_WE) # Extract the filename without extension

    ADD_EXECUTABLE(${EXAMPLE_TARGET_NAME} ${EXAMPLE_SOURCE} ${PROVIDERS_SOURCE_FILES})
    MESSAGE(STATUS "Example source: ${EXAMPLE_TARGET_NAME}")

    TARGET_INCLUDE_DIRECTORIES(${EXAMPLE_TARGET_NAME} PRIVATE ${CARDANO_C_INCLUDE_DIR})
    TARGET_INCLUDE_DIRECTORIES(${EXAMPLE_TARGET_NAME} PRIVATE utils providers)

    TARGET_LINK_LIBRARIES(${EXAMPLE_TARGET_NAME} PRIVATE cardano-c ${CURL_LIBRARIES})
ENDFOREACH()